# ciruela

./: .buildinfo  .gitignore  .travis.yml  CONFIG.rst  Cargo.toml  LICENSE-MIT  PROTOCOL.rst  README.md  README.rst  bulk.yaml  changelog.html  compatibility.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  vagga.yaml
.travis/: publish-docs.sh
_sources/: compatibility.rst.txt
_sources/client/: sync.rst.txt
_sources/config/: daemon.rst.txt  index.rst.txt
_sources/database/: indexes.rst.txt
_sources/protocols/: index.rst.txt  sync.rst.txt  websocket.rst.txt
_sources/use-cases/: editing-configs.rst.txt
_static/: documentation_options.js
client/: index.html  keys.html  sync.html
config/: daemon.html  directory.html  index.html
database/: index.html  indexes.html  signatures.html
doc/: Makefile  changelog.rst  compatibility.rst  conf.py  index.rst
doc/client/: index.rst  keys.rst  sync.rst
doc/config/: daemon.rst  directory.rst
doc/database/: index.rst  map.rst  signatures.rst
doc/protocols/: index.rst  sync.rst  websocket.rst
doc/use-cases/: index.rst  syncing-configs.rst
example-configs/: README.rst
example-configs/configs/: dir1.yaml
example-configs3/: README.rst  master.key  peers.txt
example-configs3/configs/: dir1.yaml  dir2.yaml
examples/: custom_downloader.rs  custom_uploader.rs
protocols/: index.html  sync.html  websocket.html
src/: block_id.rs  blocks.rs  failure_tracker.rs  hexlify.rs  id.rs  index.rs  lib.rs  machine_id.rs  signature.rs  time.rs  virtual_path.rs
src/client/: global_options.rs  keys.rs  main.rs  name.rs
src/client/edit/: editor.rs  mod.rs  network.rs
src/client/put_file/: mod.rs  network.rs
src/client/sync/: mod.rs  network.rs  uploads.rs
src/client/upload/: mod.rs  options.rs
src/cluster/: addr.rs  completion.rs  config.rs  download.rs  error.rs  future.rs  mod.rs  set.rs  upload.rs
src/daemon/: base_dir.rs  config.rs  dir_config.rs  dir_util.rs  failure_tracker.rs  http.rs  index.rs  index_cache.rs  machine_id.rs  main.rs  mask.rs  metrics.rs  named_mutex.rs  websocket.rs
src/daemon/cleanup/: calc.rs  mod.rs
src/daemon/disk/: commit.rs  dir.rs  dispatcher.rs  error.rs  message.rs  mod.rs  public.rs
src/daemon/metadata/: append_dir.rs  config.rs  dir.rs  dir_ext.rs  error.rs  first_scan.rs  hardlink_sources.rs  index_gc.rs  keys.rs  mod.rs  read_index.rs  reconciliation.rs  scan.rs  store_index.rs  upload.rs
src/daemon/peers/: cantal.rs  config.rs  file.rs  gossip.rs  mod.rs  packets.rs  two_way_map.rs
src/daemon/remote/: mod.rs  outgoing.rs  websocket.rs
src/daemon/tracking/: base_dir.rs  cleanup.rs  fetch_blocks.rs  fetch_dir.rs  fetch_index.rs  first_scan.rs  index.rs  mod.rs  progress.rs  reconciliation.rs  rpc.rs  subsystem.rs
src/database/: signatures.rs
src/proto/: block_commands.rs  client.rs  dir_commands.rs  hash.rs  index_commands.rs  message.rs  mod.rs  p2p_commands.rs  request.rs  serializers.rs  server.rs  signature.rs  stream_ext.rs
src/serialize/: duration.rs  mod.rs  timestamp.rs
use-cases/: editing-configs.html  index.html  syncing-configs.html
utils/: emulate_gossip.py
