[package]
name = "ciruela"
description = """
    A peer-to-peer synchronization software for servers in datacenters.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["p2p", "file", "sync", "synchronization"]
categories = [
    "command-line-utilities",
    "filesystem",
    "development-tools",
    "network-programming",
    ]
homepage = "http://github.com/tailhook/ciruela"
documentation = "https://tailhook.github.io/ciruela/"
version = "0.1.7"
authors = ["paul@colomiets.name"]

[dependencies]
argparse = "0.2.1"
quick-error = "1.2.0"
log = "0.3.8"
env_logger = "0.4.3"
openat = "0.1.10"
quire = "0.2.3"
scan_dir = "0.3.3"
tokio-core = "0.1.8"
futures = "0.1.14"
time = "0.1.37"
tk-bufstream = "0.3.0"
tk-http = "0.3.0"
ssh-keys = "0.1.0"
rustc-serialize = "0.3.24"
dir-signature = "0.2.0"
tk-easyloop = "0.1.1"
abstract-ns = "0.3.4"
ns-std-threaded = "0.2.0"
futures-cpupool = "0.1.5"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_cbor = "0.6.1"
serde_bytes = "0.10.1"
base64 = "0.6.0"
rust-crypto = "0.2.36"
hex = "0.2.0"
mopa = "0.2.2"
tk-listen = "0.1.0"
lazy_static = "0.2.8"
matches = "0.1.6"
regex = "0.2.2"
crossbeam = "0.3.0"
tk-cantal = "0.2.0"
blake2 = "0.3.0"
typenum = "1.5.1"
digest-writer = "0.1.0"
atomic = "0.3.4"
rand = "0.3.16"
valuable_futures ="0.1.0"
hostname = "0.1.3"

[dev-dependencies]
humantime = "1.0.0"

[profile.release]
debug = true

[[bin]]
name = "ciruela-server"
path = "src/daemon/main.rs"

[[bin]]
name = "ciruela"
path = "src/client/main.rs"
