[package]
name = "ciruela"
description = """
    A peer-to-peer synchronization software for servers in datacenters.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["p2p", "file", "sync", "synchronization"]
categories = [
    "command-line-utilities",
    "filesystem",
    "development-tools",
    "network-programming",
    ]
homepage = "http://github.com/tailhook/ciruela"
documentation = "https://tailhook.github.io/ciruela/"
version = "0.6.3"
authors = ["paul@colomiets.name"]

[dependencies]
argparse = "0.2.1"
quick-error = "1.2.1"
log = "0.4.1"
env_logger = "0.5.3"
openat = "0.1.13"
quire = "0.3.1"
scan_dir = "0.3.3"
tokio-core = "0.1.12"
tokio-io = "0.1.1"
futures = "0.1.16"
time = "0.1.37"
tk-bufstream = "0.3.0"
tk-http = { version="0.3.8", default-features=false }
ssh-keys = "0.1.0"
dir-signature = "0.2.9"
tk-easyloop = "0.1.1"
abstract-ns = "0.4.1"
ns-std-threaded = "0.3.0"
ns-router = "0.1.5"
futures-cpupool = "0.1.8"
ns-env-config = "0.1.0"
serde = { version="1.0.9", features=["rc"] }
serde_derive = "1.0.15"
serde_cbor = "0.8.1"
serde_bytes = "0.10.2"
serde_json = "1.0.5"
base64 = "0.9.0"
rust-crypto = "0.2.36"
hex = "0.3.1"
mopa = "0.2.2"
tk-listen = "0.1.0"
lazy_static = "1.0.0"
matches = "0.1.6"
regex = "0.2.5"
crossbeam = "0.3.2"
tk-cantal = "0.3.2"
blake2 = "0.7.0"
digest-writer = "0.3.1"
atomic = "0.3.4"
rand = "0.4.2"
valuable_futures ="0.1.0"
hostname = "0.1.4"
self-meter-http = "0.4.1"
libcantal = "0.3.2"
void = "1.0.0"
libc = "0.2.36"
failure = "0.1.1"
structopt = "0.2.4"
humantime = "1.1.1"
tempfile = "3.0.0"

[dev-dependencies]
pretty_assertions = "0.5.1"

[profile.release]
debug = true

[[bin]]
name = "ciruela-server"
path = "src/daemon/main.rs"
doc = false

[[bin]]
name = "ciruela"
path = "src/client/main.rs"
doc = false
